--- a/bar_chart_race/index.html
+++ b/bar_chart_race/index.html
@@ -41,6 +41,7 @@
         <div id="chart-container" class="chart-div">
             <!-- Placeholder for charts -->
         </div>
+        <script src="./bar_chart_race.js"></script>
     </main>
 
 
