add correlation correction

--- a/choropleth_map/index.html
+++ b/choropleth_map/index.html
@@ -27,7 +27,7 @@
                             <a class="nav-link" href="../bar_chart_race/">Bar Chart Race</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active">Choropleth Map</a>
+                            <a class="nav-link active">Correlation coefficient</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../stacked_area_bar_chart/">Stacked Area Bar Chart</a>
@@ -40,6 +40,7 @@
 
     <main>
         <div id="chart-container" class="chart-div">
+        <script src="Correlation_correction.js"></script>
             <!-- Placeholder for charts -->
         </div>
     </main>
