--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                     <div class="button-group">
                         <button onclick="location.href='./bar_chart_race/'">Bar Chart Race</button>
-                        <button onclick="location.href='./choropleth_map/'">Choropleth Map</button>
+                        <button onclick="location.href='./choropleth_map/'">Correlation coefficient</button>
                         <button onclick="location.href='./stacked_area_bar_chart/'">Stacked Area Bar Chart</button>
                     </div>
 
