--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -40,7 +40,7 @@
 
     <main>
         <div id="chart-container" class="chart-div">
-            <!-- Placeholder for charts -->
+            <script src=Map.js></script>
         </div>
     </main>
 
