--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -40,8 +40,9 @@
 
     <main>
         <div id="chart-container" class="chart-div">
-            <script src=Map.js></script>
+
         </div>
+        <script src="./bar_chart_race.js"></script>
     </main>
 
 
