--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -42,7 +42,7 @@
         <div id="chart-container" class="chart-div">
 
         </div>
-        <script src="./bar_chart_race.js"></script>
+        <script src="./Map.js"></script>
     </main>
 
 
