--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -40,7 +40,7 @@
 
     <main>
         <div id="chart-container" class="chart-div">
-            <script src="./313551139_bundle.js"></script>
+            <script src="./Map_data.js"></script>
         </div>
         
     </main>
