--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -66,7 +66,7 @@
 
     <main>
         <div id="chart-container" class="chart-div">
-            <script src="./Map_data.js"></script>
+            <script src="./Map.js"></script>
         </div>
         
     </main>
