--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
+    <style>
+      body {
+        font-family: 'Arial', sans-serif; 
+      }
+      #mapSliderContainer {
+        position: absolute; 
+        right: 10px; 
+        top: 300px;
+        height: 100px; 
+        display: flex;
+        flex-direction: column; 
+        align-items: center; 
+        gap: 10px; 
+      }
+
+      #mapSlider {
+        transform: rotate(-90deg); 
+        transform-origin: center; 
+        width: 300px;
+      }
+
+      #yearSelector {
+        position: fixed; 
+        top: 170px; 
+        right: 50px; 
+        z-index: 10;
+        width :100px;
+        font-family: 'Verdana', sans-serif; 
+        font-size:30px;
+      }
+    </style>
 </head>
 
 <body>
@@ -17,7 +48,29 @@
             <a class="navbar-brand text-white" href="./"><b>Pollution and Disease</b></a>
         </div>
     </nav>
-
+    <div id="mapSliderContainer">
+      <div class="control">
+        <input
+          type="range"
+          id="mapSlider"
+          min="4"
+          max="14"
+          value="4"
+          step="1"
+        />
+      </div>
+      <div class="control">
+        <select id="yearSelector">
+          <option value="2010">2010</option>
+          <option value="2011">2011</option>
+          <option value="2012">2012</option>
+          <option value="2013">2013</option>
+          <option value="2014">2014</option>
+          <option value="2015">2015</option>
+          <option value="2016">2016</option>
+          <option value="2017">2017</option>
+        </select>
+      </div>
     <!-- Background image -->
     <div id="intro" class="bg-image shadow-2-strong">
         <div class="mask h-100">
