--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -6,6 +6,37 @@
     <title>Pollution and Disease</title>
     <script src="https://unpkg.com/d3@7.9.0/dist/d3.min.js"></script>
     <script src="https://unpkg.com/d3-simple-slider"></script>
+    <style>
+      body {
+        font-family: 'Arial', sans-serif; 
+      }
+      #mapSliderContainer {
+        position: absolute; 
+        right: 10px; 
+        top: 300px;
+        height: 100px; 
+        display: flex;
+        flex-direction: column; 
+        align-items: center; 
+        gap: 10px; 
+      }
+
+      #mapSlider {
+        transform: rotate(-90deg); 
+        transform-origin: center; 
+        width: 300px;
+      }
+
+      #yearSelector {
+        position: fixed; 
+        top: 170px; 
+        right: 50px; 
+        z-index: 10;
+        width :100px;
+        font-family: 'Verdana', sans-serif; 
+        font-size:30px;
+      }
+    </style>
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -44,7 +75,30 @@
         </div>
         
     </main>
-
+    <div id="mapSliderContainer">
+      <div class="control">
+        <input
+          type="range"
+          id="mapSlider"
+          min="4"
+          max="14"
+          value="4"
+          step="1"
+        />
+      </div>
+      <div class="control">
+        <select id="yearSelector">
+          <option value="2010">2010</option>
+          <option value="2011">2011</option>
+          <option value="2012">2012</option>
+          <option value="2013">2013</option>
+          <option value="2014">2014</option>
+          <option value="2015">2015</option>
+          <option value="2016">2016</option>
+          <option value="2017">2017</option>
+        </select>
+      </div>
+    </div>
     <svg width="2500" height="1800"></svg>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
