--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -99,7 +99,7 @@
         </select>
       </div>
     </div>
-    <svg width="2500" height="1300"></svg>
+    <svg width="2500" height="1300"  style="transform: translateY(-50px);"></svg>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
