--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -13,27 +13,30 @@
       #mapSliderContainer {
         position: absolute; 
         right: 10px; 
-        top: 470px;
+        top: 300px;
         height: 100px; 
         display: flex;
         flex-direction: column; 
         align-items: center; 
+        z-index: 100;
         gap: 10px; 
       }
 
       #mapSlider {
         transform: rotate(-90deg); 
         transform-origin: center; 
+        z-index: 101;
         width: 300px;
       }
 
       #yearSelector {
         position: fixed; 
-        top: 330px; 
-        right: 40px; 
+        top: 170px; 
+        right: 50px; 
         z-index: 10;
         width :100px;
         font-family: 'Verdana', sans-serif; 
+        z-index: 101;
         font-size:30px;
       }
     </style>
