add how to prevent page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <button onclick="location.href='./bar_chart_race/'">Bar Chart Race</button>
                         <button onclick="location.href='./choropleth_map/'">Correlation coefficient</button>
                         <button onclick="location.href='./stacked_area_bar_chart/'">Stacked Area Bar Chart</button>
+                        <button onclick="location.href='./prevent/'">How to Prevent</button>
                     </div>
 
 
