--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -64,7 +64,7 @@
                             <a class="nav-link" href="../choropleth_map/">Choropleth Map</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active">Stacked Area Bar Chart</a>
+                            <a class="nav-link active">Global</a>
                         </li>
                     </ul>
                 </div>
