--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -66,6 +66,9 @@
                         <li class="nav-item">
                             <a class="nav-link active">Global</a>
                         </li>
+                        <li lass="nav-item">
+                            <a class="nav-link" href="../prevent/">Prevent</a>
+                        </li>
                     </ul>
                 </div>
             </div>
