--- a/choropleth_map/index.html
+++ b/choropleth_map/index.html
@@ -30,7 +30,10 @@
                             <a class="nav-link active">Correlation coefficient</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../stacked_area_bar_chart/">Stacked Area Bar Chart</a>
+                            <a class="nav-link" href="../stacked_area_bar_chart/">Global</a>
+                        </li>
+                        <li lass="nav-item">
+                            <a class="nav-link" href="../prevent/">Prevent</a>
                         </li>
                     </ul>
                 </div>
