--- a/bar_chart_race/index.html
+++ b/bar_chart_race/index.html
@@ -29,7 +29,10 @@
                             <a class="nav-link" href="../choropleth_map/">Choropleth Map</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../stacked_area_bar_chart/">Stacked Area Bar Chart</a>
+                            <a class="nav-link" href="../stacked_area_bar_chart/">Global</a>
+                        </li>
+                        <li lass="nav-item">
+                            <a class="nav-link" href="../prevent/">Prevent</a>
                         </li>
                     </ul>
                 </div>
