Adjust index.html name

--- a/choropleth_map/index.html
+++ b/choropleth_map/index.html
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../stacked_area_bar_chart/">Stacked Area Bar Chart</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../prevent/">Prevent</a>
+                        </li>
                     </ul>
                 </div>
             </div>
