--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -61,11 +61,14 @@
                             <a class="nav-link" href="../bar_chart_race/">Bar Chart Race</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../choropleth_map/">Choropleth Map</a>
+                            <a class="nav-link" href="../choropleth_map/">Correlation coefficient</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active">Stacked Area Bar Chart</a>
                         </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="../prevent/">Prevent</a>
+                      </li>
                     </ul>
                 </div>
             </div>
