--- a/bar_chart_race/index.html
+++ b/bar_chart_race/index.html
@@ -26,10 +26,13 @@
                             <a class="nav-link active">Bar Chart Race</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../choropleth_map/">Choropleth Map</a>
+                            <a class="nav-link" href="../choropleth_map/">Correlation coefficient</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../stacked_area_bar_chart/">Stacked Area Bar Chart</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../prevent/">Prevent</a>
                         </li>
                     </ul>
                 </div>
