--- a/prevent/index.html
+++ b/prevent/index.html
@@ -26,7 +26,7 @@
                             <a class="nav-link" href="../bar_chart_race/">Bar Chart Race</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../choropleth_map/">Choropleth Map</a>
+                            <a class="nav-link" href="../choropleth_map/">Correlation coefficient</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../stacked_area_bar_chart/">Stacked Area Bar Chart</a>
