--- a/prevent/index.html
+++ b/prevent/index.html
@@ -29,7 +29,7 @@
                             <a class="nav-link" href="../choropleth_map/">Choropleth Map</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../stacked_area_bar_chart/">Stacked Area Bar Chart</a>
+                            <a class="nav-link" href="../stacked_area_bar_chart/">Global</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active">Prevent</a>
