--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pollution and Disease</title>
+    <title>Pollution and Death</title>
     <script src="https://unpkg.com/d3@7.9.0/dist/d3.min.js"></script>
     <script src="https://unpkg.com/d3-simple-slider"></script>
     <style>
@@ -50,7 +50,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../"><b>Pollution and Disease</b></a>
+                <a class="navbar-brand" href="../"><b>Pollution and Death</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
