add button icon

--- a/stacked_area_bar_chart/index.html
+++ b/stacked_area_bar_chart/index.html
@@ -56,24 +56,25 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../bar_chart_race/">Bar Chart Race</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../choropleth_map/">Correlation coefficient</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active">Global</a>
-                        </li>
-                        <li lass="nav-item">
-                            <a class="nav-link" href="../prevent/">Prevent</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="../prevent/">Prevent</a>
+                  <ul class="navbar-nav">
+                      <li class="nav-item">
+                          <a class="nav-link" href="../bar_chart_race/">                                        
+                            <img src="../image/Death.png" width="30" height="32" alt="Bar Chart">Death Race</a>
                       </li>
-                    </ul>
-                </div>
+                      <li class="nav-item">
+                          <a class="nav-link" href="../choropleth_map/">
+                            <img src="../image/tree.png" width="28" height="32" alt="Bar Chart">Tree</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link active">
+                            <img src="../image/global.png" width="34" height="32" alt="Bar Chart">Global</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="../prevent/">
+                            <img src="../image/prevent.png" width="32" height="32" alt="Bar Chart">Prevent</a>
+                      </li>
+                  </ul>
+              </div>
             </div>
         </nav>
     </header>
